--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>info.resc.rml.carml</groupId>
 	<artifactId>cli</artifactId>
-	<version>0.0.6-SNAPSHOT</version>
+	<version>0.0.8-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>cli</name>
@@ -146,6 +146,16 @@
 		<dependency>
 			<groupId>com.taxonic.carml</groupId>
 			<artifactId>carml-logical-source-resolver-xpath</artifactId>
+			<version>0.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.taxonic.carml</groupId>
+			<artifactId>carml-logical-source-resolver-jsonpath</artifactId>
+			<version>0.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.taxonic.carml</groupId>
+			<artifactId>carml-logical-source-resolver-csv</artifactId>
 			<version>0.2.0</version>
 		</dependency>
 		<dependency>
