--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>info.resc.rml.carml</groupId>
 	<artifactId>cli</artifactId>
-	<version>0.0.9-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>cli</name>
@@ -12,7 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<rdf4j.version>2.4.0</rdf4j.version>
+		<rdf4j.version>2.5.0</rdf4j.version>
 	</properties>
 	<build>
 		<pluginManagement>
@@ -80,6 +80,11 @@
 			<artifactId>rdf4j-rio-ntriples</artifactId>
 			<version>${rdf4j.version}</version>
 		</dependency>
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20180813</version>
+</dependency>
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-turtle</artifactId>
