--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -12,7 +13,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<rdf4j.version>2.5.0</rdf4j.version>
+		<rdf4j.version>3.6.0</rdf4j.version>
+		<carml.version>0.3.1</carml.version>
+		<slf4j.version>1.7.30</slf4j.version>
 	</properties>
 	<build>
 		<pluginManagement>
@@ -80,31 +83,26 @@
 			<artifactId>rdf4j-rio-ntriples</artifactId>
 			<version>${rdf4j.version}</version>
 		</dependency>
-<dependency>
-    <groupId>org.json</groupId>
-    <artifactId>json</artifactId>
-    <version>20180813</version>
-</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180813</version>
+		</dependency>
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-turtle</artifactId>
 			<version>${rdf4j.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-trig</artifactId>
 			<version>${rdf4j.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-rdfxml</artifactId>
 			<version>${rdf4j.version}</version>
 		</dependency>
-
-
-
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-n3</artifactId>
@@ -116,7 +114,6 @@
 			<artifactId>rdf4j-rio-nquads</artifactId>
 			<version>${rdf4j.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-jsonld</artifactId>
@@ -128,7 +125,6 @@
 			<artifactId>rdf4j-rio-rdfjson</artifactId>
 			<version>${rdf4j.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-trix</artifactId>
@@ -140,8 +136,11 @@
 			<artifactId>rdf4j-rio-binary</artifactId>
 			<version>${rdf4j.version}</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>org.eclipse.rdf4j</groupId>
+			<artifactId>rdf4j-model</artifactId>
+			<version>${rdf4j.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -151,36 +150,42 @@
 		<dependency>
 			<groupId>com.taxonic.carml</groupId>
 			<artifactId>carml-engine</artifactId>
-			<version>0.3.1</version>
+			<version>${carml.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.taxonic.carml</groupId>
 			<artifactId>carml-logical-source-resolver-xpath</artifactId>
-			<version>0.3.1</version>
+			<version>${carml.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.taxonic.carml</groupId>
 			<artifactId>carml-logical-source-resolver-jsonpath</artifactId>
-			<version>0.3.1</version>
+			<version>${carml.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.taxonic.carml</groupId>
 			<artifactId>carml-logical-source-resolver-csv</artifactId>
-			<version>0.3.1</version>
+			<version>${carml.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.3</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>com.taxonic.carml</groupId>
 			<artifactId>carml-logical-source-resolver</artifactId>
-			<version>0.3.1</version>
+			<version>${carml.version}</version>
 		</dependency>
-
-
-
 	</dependencies>
 </project>
